# med-rag

./: .gitignore  Dockerfile  Jenkinsfile  main.py  pyproject.toml
app/: application.py
